# infrastructure

./: .build.yml  .envrc  .gitignore  .gitlab-ci.yml  Pipfile  README.md  README.rst  docker-compose.yaml  host.nix  ideas.rst  initialize-droplet.py  overlays.nix  pyproject.toml  secrets.tar.enc  secrets_file_manager.sh  shell.nix
.vim/: coc-settings.json
cicd/deploy/: before_script.sh  script.sh
pkgs/: 0001-Update-peer-dependencies.patch  maubot.nix  maubot.tmp.nix
pkgs/maubot/: default.nix  update.sh  yarnPkgs.nix
services/: acme.nix  airsonic.nix  bitwarden.nix  default.nix  duplicity.nix  goaccess.nix  gonic-module.nix  gonic.nix  heartbeat.nix  isso.nix  logrotate.nix  longview.nix  matomo.nix  matrix.nix  mumble.nix  mysql.nix  nextcloud.nix  nginx.nix  postgresql.nix  quassel.nix  restic.nix  syncthing.nix  thelounge.nix  wireguard.nix  xandikos.nix
services/matrix/: default.nix  maubot.nix  synapse.nix
traefik/: docker-compose.yaml
