[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Nix configs for my personal infrastructure"
authors = ["Sumner Evans <me@sumnerevans.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rst2html5 = "^1.10.6"

[tool.poetry.dev-dependencies]
python-digitalocean = "^1.15.0"
yapf = "^0.30.0"
flake8 = "^3.8.3"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
